-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.9.1
-
None
-
-
0e465a358 (dev), fbbebc2df (6.10), 7f4a0e23b (6.9), 8a4376b96 (tqtc/lts-6.8)
QIBASE driver fails to build when linking against Firebird v2.5. The reason is that Firebird v2.5 doesn't support SQL_BOOLEAN type constant. So the suggested solution is to surround all instances where it is used with a
#if (FB_API_VER >= 30)
...
#endif
block. Attached the modified source for your convenience
For Gerrit Dashboard: QTBUG-138904 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
666162,4 | SQL/IBase fix compile with ancient Firebird 2.x | dev | qt/qtbase | Status: MERGED | +2 | 0 |
667320,2 | SQL/IBase fix compile with ancient Firebird 2.x | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
667349,2 | SQL/IBase fix compile with ancient Firebird 2.x | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
667367,2 | SQL/IBase fix compile with ancient Firebird 2.x | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |