SQL/IBase fix compile with ancient Firebird 2.x

Firbird 2.5 added SQL_BOOLEAN in 2014 (https://www.firebirdsql.org/file/community/conference-2014/pdf/02_fb.2014.whatsnew.30.en.pdf).

Simply add the missing define to fix compilation.

Pick-to: 6.8
Fixes: QTBUG-138904
Change-Id: I4bd4a04be46a844fa18506b1a298b984a0299cbb
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit 0e465a358572fbb8f0615ae6a930599dd6c016ba)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit fbbebc2df21b8217c02c44b679241b624f01e249)